[gd_scene load_steps=7 format=2]

[ext_resource path="res://tileset.tres" type="TileSet" id=1]
[ext_resource path="res://Map1.gd" type="Script" id=2]
[ext_resource path="res://L4P1.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/SFX/winP1.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/players/player2/Player2.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 123.71, 124.223 )

[node name="Map1" type="TileMap"]
scale = Vector2( 0.25, 0.25 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 0, 8, 0, 1, 8, 0, 2, 8, 0, 3, 8, 0, 4, 8, 0, 5, 8, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 10, 8, 0, 11, 8, 0, 12, 8, 0, 13, 8, 0, 14, 8, 0, 15, 8, 0, 16, 8, 0, 17, 8, 0, 18, 8, 0, 19, 8, 0, 20, 8, 0, 21, 8, 0, 22, 8, 0, 23, 8, 0, 24, 8, 0, 25, 8, 0, 26, 8, 0, 27, 8, 0, 28, 8, 0, 29, 8, 0, 65536, 8, 0, 65542, 8, 0, 65545, 8, 0, 65546, 8, 0, 65547, 8, 0, 65548, 8, 0, 65549, 8, 0, 65550, 8, 0, 65551, 8, 0, 65552, 8, 0, 65553, 8, 0, 65554, 8, 0, 65557, 8, 0, 65560, 8, 0, 65561, 8, 0, 65562, 8, 0, 65563, 8, 0, 65564, 8, 0, 65565, 8, 0, 131072, 8, 0, 131078, 8, 0, 131081, 8, 0, 131082, 8, 0, 131083, 8, 0, 131084, 8, 0, 131093, 8, 0, 131096, 8, 0, 131097, 8, 0, 131098, 8, 0, 131099, 8, 0, 131100, 8, 0, 131101, 8, 0, 196608, 8, 0, 196611, 8, 0, 196614, 8, 0, 196629, 8, 0, 196632, 8, 0, 196635, 7, 0, 196636, 7, 0, 196637, 8, 0, 262144, 8, 0, 262145, 8, 0, 262146, 8, 0, 262147, 8, 0, 262150, 8, 0, 262159, 8, 0, 262162, 8, 0, 262163, 8, 0, 262164, 8, 0, 262165, 8, 0, 262168, 8, 0, 262171, 7, 0, 262172, 7, 0, 262173, 8, 0, 327680, 8, 0, 327681, 6, 0, 327682, 6, 0, 327686, 8, 0, 327689, 8, 0, 327690, 8, 0, 327691, 8, 0, 327692, 8, 0, 327695, 8, 0, 327704, 8, 0, 327707, 8, 0, 327708, 8, 0, 327709, 8, 0, 393216, 8, 0, 393217, 6, 0, 393218, 6, 0, 393222, 8, 0, 393228, 8, 0, 393231, 8, 0, 393240, 8, 0, 393243, 8, 0, 393244, 8, 0, 393245, 8, 0, 458752, 8, 0, 458753, 8, 0, 458754, 8, 0, 458755, 8, 0, 458758, 8, 0, 458764, 8, 0, 458765, 8, 0, 458766, 8, 0, 458767, 8, 0, 458770, 8, 0, 458771, 8, 0, 458772, 8, 0, 458773, 8, 0, 458774, 8, 0, 458775, 9, 0, 458776, 8, 0, 458781, 8, 0, 524288, 8, 0, 524291, 8, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 8, 0, 524298, 8, 0, 524299, 8, 0, 524300, 8, 0, 524312, 8, 0, 524317, 8, 0, 589824, 8, 0, 589827, 8, 0, 589848, 8, 0, 589849, 8, 0, 589850, 8, 0, 589853, 8, 0, 655360, 8, 0, 655363, 8, 0, 655380, 8, 0, 655384, 8, 0, 655385, 8, 0, 655386, 8, 0, 655389, 8, 0, 720896, 8, 0, 720899, 8, 0, 720900, 8, 0, 720901, 8, 0, 720902, 8, 0, 720905, 8, 0, 720906, 8, 0, 720907, 8, 0, 720910, 9, 0, 720911, 9, 0, 720912, 9, 0, 720913, 9, 0, 720916, 8, 0, 720925, 8, 0, 786432, 8, 0, 786435, 8, 0, 786436, 8, 0, 786437, 8, 0, 786438, 8, 0, 786441, 8, 0, 786442, 8, 0, 786443, 8, 0, 786446, 9, 0, 786447, 9, 0, 786448, 9, 0, 786449, 9, 0, 786452, 8, 0, 786461, 8, 0, 851968, 8, 0, 851971, 8, 0, 851972, 8, 0, 851973, 8, 0, 851974, 8, 0, 851977, 8, 0, 851978, 8, 0, 851979, 8, 0, 851982, 9, 0, 851983, 9, 0, 851984, 9, 0, 851985, 9, 0, 851988, 8, 0, 851991, 8, 0, 851992, 8, 0, 851993, 8, 0, 851994, 8, 0, 851995, 8, 0, 851996, 8, 0, 851997, 8, 0, 917504, 8, 0, 917513, 8, 0, 917514, 8, 0, 917515, 8, 0, 917524, 8, 0, 917533, 8, 0, 983040, 8, 0, 983049, 8, 0, 983050, 8, 0, 983051, 8, 0, 983060, 8, 0, 983069, 8, 0, 1048576, 8, 0, 1048577, 8, 0, 1048578, 8, 0, 1048579, 8, 0, 1048580, 8, 0, 1048581, 8, 0, 1048582, 8, 0, 1048583, 8, 0, 1048584, 8, 0, 1048585, 8, 0, 1048586, 8, 0, 1048587, 8, 0, 1048588, 8, 0, 1048589, 8, 0, 1048590, 8, 0, 1048591, 8, 0, 1048592, 8, 0, 1048593, 8, 0, 1048594, 8, 0, 1048595, 8, 0, 1048596, 8, 0, 1048597, 8, 0, 1048598, 8, 0, 1048599, 8, 0, 1048600, 8, 0, 1048601, 8, 0, 1048602, 8, 0, 1048603, 8, 0, 1048604, 8, 0, 1048605, 8, 0 )
script = ExtResource( 2 )

[node name="Goal" type="Area2D" parent="."]

[node name="GoalCol" type="CollisionShape2D" parent="Goal"]
position = Vector2( 3586.86, 513.775 )
shape = SubResource( 1 )

[node name="P1" parent="." instance=ExtResource( 3 )]
position = Vector2( 252.1, 766.383 )

[node name="Camera2D" type="Camera2D" parent="P1"]
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="Start" type="Position2D" parent="."]
position = Vector2( 255.05, 765.15 )

[node name="win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.6
one_shot = true

[node name="Ghost1" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 255.812, 423.413 )
texture = ExtResource( 5 )

[node name="Ghost2" type="Sprite" parent="."]
modulate = Color( 0.733333, 0.776471, 0.341176, 1 )
position = Vector2( 1658.37, 502.803 )
texture = ExtResource( 5 )

[node name="Ghost3" type="Sprite" parent="."]
modulate = Color( 0.380392, 0.603922, 0.337255, 1 )
position = Vector2( 2405.14, 1915.41 )
texture = ExtResource( 5 )

[node name="Ghost4" type="Sprite" parent="."]
modulate = Color( 0.423529, 0.356863, 0.321569, 1 )
position = Vector2( 1028.44, 1523.62 )
texture = ExtResource( 5 )

[node name="Ghost5" type="Sprite" parent="."]
modulate = Color( 0.231373, 0.898039, 0.709804, 1 )
position = Vector2( 3259.46, 1545.38 )
texture = ExtResource( 5 )
[connection signal="area_entered" from="Goal" to="." method="_on_Goal_area_entered"]
[connection signal="hit" from="P1" to="." method="_on_P1_hit"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
